# mate-terminal

./: .build.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CNAME  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh  config.h.in~  configure.ac  index.html  makepot  mate-terminal.1  mate-terminal.appdata.xml  mate-terminal.appdata.xml.in  mate-terminal.appdata.xml.in.in  mate-terminal.desktop.in.in  mate-terminal.pot  mate-terminal.wrapper  meson.build  meson_options.txt  meson_post_install.py  nate-terminal.1  nate-terminal.appdata.xml.in.in  nate-terminal.desktop.in.in  nate-terminal.pot  nate-terminal.wrapper  update-authors.pl
caja/: Makefile  Makefile.am  Makefile.in  caja-open-terminal.c  caja-open-terminal.h  eel-mate-extensions.c  eel-mate-extensions.h  open-terminal.c
help/: LINGUAS  Makefile.am  Makefile.in  mate-terminal.pot  meson.build  nate-terminal.pot
help/C/: index.docbook  index.page  legal.xml  mate-terminal-encoding.page  mate-terminal-manage-profiles.page  mate-terminal-prefs-compatibility.page  mate-terminal-prefs-scrolling.page  mate-terminal-prefs-title.page  mate-terminal-reset.page  mate-terminal-tabs.page  mate-terminal-to-start.page  mate-terminal.xml  nate-terminal-contents.page  nate-terminal-encoding.page  nate-terminal-first-start.page  nate-terminal-introduction.page  nate-terminal-manage-profiles.page  nate-terminal-more-windows.page  nate-terminal-prefs-colors.page  nate-terminal-prefs-compatibility.page  nate-terminal-prefs-effects.page  nate-terminal-prefs-general.page  nate-terminal-prefs-scrolling.page  nate-terminal-prefs-title.page  nate-terminal-profiles.page  nate-terminal-reset.page  nate-terminal-resize.page  nate-terminal-shortcuts.page  nate-terminal-tabs.page  nate-terminal-title.page  nate-terminal-to-start.page  nate-terminal-windows.page
help/af/: af.po
help/am/: am.po
help/an/: an.po
help/ar/: ar.po
help/ar_AE/: ar_AE.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: Makefile.am  Makefile.in  bg.po  legal.xml  mate-terminal-bg.omf  mate-terminal.xml
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/bqi/: bqi.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/csb/: csb.po
help/cv/: cv.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/de_AT/: de_AT.po
help/de_CH/: de_CH.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_BR/: en_BR.po
help/en_CA/: en_CA.po
help/en_DE/: en_DE.po
help/en_GB/: en_GB.po
help/en_US/: en_US.po
help/eo/: eo.po
help/es/: es.po
help/es_419/: es_419.po
help/es_AR/: es_AR.po
help/es_CL/: es_CL.po
help/es_CO/: es_CO.po
help/es_CR/: es_CR.po
help/es_DO/: es_DO.po
help/es_EC/: es_EC.po
help/es_ES/: es_ES.po
help/es_MX/: es_MX.po
help/es_NI/: es_NI.po
help/es_PA/: es_PA.po
help/es_PE/: es_PE.po
help/es_PR/: es_PR.po
help/es_SV/: es_SV.po
help/es_US/: es_US.po
help/es_UY/: es_UY.po
help/es_VE/: es_VE.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fil/: fil.po
help/fo/: fo.po
help/fr/: fr.po
help/fr_CA/: fr_CA.po
help/fr_FR/: fr_FR.po
help/frp/: frp.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gd/: gd.po
help/gl/: gl.po
help/gu/: gu.po
help/gug/: gug.po
help/gug_PY/: gug_PY.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/ia/: ia.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
help/it/: it.po
help/ja/: Makefile.am  Makefile.in  ja.po  legal.xml  mate-terminal-ja.omf  mate-terminal.xml
help/ja_JP/: ja_JP.po
help/jv/: jv.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/km/: km.po
help/kn/: kn.po
help/ko/: ko.po
help/ks/: ks.po
help/ku/: ku.po
help/ku_IQ/: ku_IQ.po
help/ky/: ky.po
help/la/: la.po
help/lb/: lb.po
help/lfn/: lfn.po
help/li/: li.po
help/lo/: lo.po
help/lt/: lt.po
help/lt_LT/: lt_LT.po
help/lv/: lv.po
help/mai/: mai.po
help/mg/: mg.po
help/mi/: mi.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/my/: my.po
help/nah/: nah.po
help/nan/: nan.po
help/nan_Hant/: nan_Hant.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/no/: no.po
help/nqo/: nqo.po
help/nso/: nso.po
help/oc/: oc.po
help/om/: om.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/pl_PL/: pl_PL.po
help/pms/: pms.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: Makefile.am  Makefile.in  legal.xml  mate-terminal-ro.omf  mate-terminal.xml  ro.po
help/ru/: ru.po
help/ru_RU/: ru_RU.po
help/rw/: rw.po
help/sc/: sc.po
help/sco/: sco.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/so/: so.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/sw/: sw.po
help/ta/: ta.po
help/te/: te.po
help/tg/: tg.po
help/th/: th.po
help/tk/: tk.po
help/tl/: tl.po
help/tr/: tr.po
help/ts/: ts.po
help/tt/: tt.po
help/tzm/: tzm.po
help/ug/: ug.po
src/: Makefile.am  Makefile.in  confirm-close-dialog.ui  eggdesktopfile.c  eggdesktopfile.h  eggshell.c  eggshell.h  eggsmclient-osx.c  eggsmclient-private.h  eggsmclient-win32.c  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  encodings-dialog.glade  encodings-dialog.ui  extra-strings.c  find-dialog.glade  find-dialog.ui  keybinding-editor.glade  keybinding-editor.ui  mate-terminal.schemas.in  meson.build  org.mate.terminal.gschema.xml.in  org.nate.terminal.gschema.xml.in  profile-editor.c  profile-editor.h  profile-manager.glade  profile-manager.ui  profile-new-dialog.glade  profile-new-dialog.ui  profile-preferences.glade  profile-preferences.ui  set-title-dialog.ui  skey-challenge.glade  skey-challenge.ui  skey-popup.c  skey-popup.h  terminal-accels.c  terminal-accels.h  terminal-actions.c  (+40 more)
(+868 files in other folders)
