@YELP_HELP_RULES@

HELP_ID = mate-terminal
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = figures/mate-terminal-default.png \
             figures/mate-terminal-tabbed.png 
#	      figures/terminal-window.png   This image is not used.

HELP_LINGUAS = da de ca cs el en_GB es fr it ko oc pt_BR ru sv uk zh_CN


# Move to HELP_LINGUAS in transition to yelp-tools
#SUBDIRS = bg ro ja zh_TW

-include $(top_srcdir)/git.mk
