help_media = [
  'figures/mate-terminal-default.png',
  'figures/mate-terminal-tabbed.png',
]

help_pages = [
  'index.page',
  'legal.xml',
  'mate-terminal-contents.page',
  'mate-terminal-encoding.page',
  'mate-terminal-first-start.page',
  'mate-terminal-introduction.page',
  'mate-terminal-manage-profiles.page',
  'mate-terminal-more-windows.page',
  'mate-terminal-prefs-colors.page',
  'mate-terminal-prefs-compatibility.page',
  'mate-terminal-prefs-effects.page',
  'mate-terminal-prefs-general.page',
  'mate-terminal-prefs-scrolling.page',
  'mate-terminal-prefs-title.page',
  'mate-terminal-profiles.page',
  'mate-terminal-reset.page',
  'mate-terminal-resize.page',
  'mate-terminal-shortcuts.page',
  'mate-terminal-tabs.page',
  'mate-terminal-title.page',
  'mate-terminal-to-start.page',
  'mate-terminal-windows.page',
]

gnome.yelp('mate-terminal',
  sources: help_pages,
  media: help_media,
  symlink_media: true,
)
