help_media = [
  'figures/nate-terminal-default.png',
  'figures/nate-terminal-tabbed.png',
]

help_pages = [
  'index.page',
  'legal.xml',
  'nate-terminal-contents.page',
  'nate-terminal-encoding.page',
  'nate-terminal-first-start.page',
  'nate-terminal-introduction.page',
  'nate-terminal-manage-profiles.page',
  'nate-terminal-more-windows.page',
  'nate-terminal-prefs-colors.page',
  'nate-terminal-prefs-compatibility.page',
  'nate-terminal-prefs-effects.page',
  'nate-terminal-prefs-general.page',
  'nate-terminal-prefs-scrolling.page',
  'nate-terminal-prefs-title.page',
  'nate-terminal-profiles.page',
  'nate-terminal-reset.page',
  'nate-terminal-resize.page',
  'nate-terminal-shortcuts.page',
  'nate-terminal-tabs.page',
  'nate-terminal-title.page',
  'nate-terminal-to-start.page',
  'nate-terminal-windows.page',
]

gnome.yelp('nate-terminal',
  sources: help_pages,
  media: help_media,
  symlink_media: true,
)
